Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5595

Impala shouldn't set KuduScanner timestamp feature flag unless necessary

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.10.0
    • Backend

    Description

      To support Kudu timestamps, Impala sets a KuduScanner flag which pads the result tuples: KuduScanner::PAD_UNIXTIME_MICROS_TO_16_BYTES

      It is always set, which is correct, but means that newer versions of Impala cannot scan older Kudus even if there are no TIMESTAMP columns.

      The flag should just be set when there are TIMESTAMP columns.

      Attachments

        Activity

          People

            mjacobs Matthew Jacobs
            mjacobs Matthew Jacobs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: