IMPALA-5595: Only set KuduScanner timestamp feature flag if necessary

To support Kudu timestamps, Impala sets a KuduScanner flag
which pads the result tuples:
KuduScanner::PAD_UNIXTIME_MICROS_TO_16_BYTES

It is always set, which is correct, but means that newer
versions of Impala cannot scan older Kudus even if there are
no TIMESTAMP columns.

Even though Impala provides no guarantees about supporting
older versions of Kudu (i.e. there is no testing), the flag
should just be set when there are TIMESTAMP columns since
this is a known incompatibility that is easy to work around
for users who are still willing to use unsupported setups.

Testing:
This works against the current version of Kudu (the only
supported configuration).

Change-Id: If5a83d2a6db97812295e6e8d37c274fe1f1dc3fb
Reviewed-on: http://gerrit.cloudera.org:8080/7321
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Impala Public Jenkins